--- a/app/android/build.gradle
+++ b/app/android/build.gradle
@@ -17,7 +17,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:7.2.1")
+        classpath "com.android.tools.build:gradle:7.2.1"
+        classpath "io.embrace:embrace-swazzler:${findProject(':react-native-embrace').properties['emb_android_sdk']}"
+       // classpath ("io.embrace:embrace-swazzler:${findProject(':react-native-embrace').properties['emb_android_sdk']}")
+        
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
