--- a/app/package.json
+++ b/app/package.json
@@ -85,6 +85,7 @@
     "react-native-config": "1.4.4",
     "react-native-confirmation-code-field": "7.3.0",
     "react-native-device-info": "8.4.9",
+    "react-native-embrace": "^3.14.0",
     "react-native-encrypted-storage": "4.0.2",
     "react-native-fs": "2.18.0",
     "react-native-gesture-handler": "1.10.3",
